Updated info for v1.2.2

--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
 
       <div class="row text-center" style="margin-bottom: 250px;margin-top: 50px;">
         <div class="button-couple">
-          <a class="button default large custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v1.2.1.zip">Download (v1.2.1)</a>
+          <a class="button default large custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v1.2.2.zip">Download (v1.2.2)</a>
           <a class="button large disabled" disabled>or</a>
           <a class="button danger large custom-down-cdn" href="javascript:void(0)" onclick="var cdn=document.getElementById('cdn');cdn.style.display=='none'?cdn.style.display='block':cdn.style.display='none';">Use CDN</a>
         </div><br>
         <pre id="cdn" style="display: none;">
           <code>
-https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.1/meshki.min.css
-https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.1/meshki.min.js
+https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.2/meshki.min.css
+https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.2/meshki.min.js
           </code>
         </pre>
       </div><br>
@@ -132,7 +132,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.1/meshki.min.js
         <hr>
         <p>
           This is a valid question. There are tons of UI libraries out there in the wild, but what makes Meshki different?<br>
-          Meshki tends to be light-weight, but useful. Contrary to most "light-weight" libraries, Meshki doesn't sacrifice usability for just being light-weight. This means that you don't need to reinvent the wheel, and many common components are ready for you to use out-of-the-box. I mean, everybody can create libraries less than 5 KiB, but does it make them useful?<br>
+          Meshki tends to be light-weight, but useful. Contrary to most "light-weight" libraries, Meshki doesn't sacrifice usability for just being light-weight. This means that you don't need to reinvent the wheel, and many common components are ready for you to use out-of-the-box. I mean, everybody can create libraries less than 5 KiB, but does this actually make them useful?<br>
           Also, Meshki strives to bring you a clean eye-candy interface, the black color doesn't hurt your eyes, and brings simplicity and elegance together. One of the main goals of Meshki is to be stable and reliable, so we try to provide you with updates and fixes as much as we can. Note that Meshki is still in alpha phase.<br>
           Meshki and Skeleton have vast differences. Although Meshki is derived from Skeleton, it's far more complete than her parent. Just have a look at Skeleton's website. Most of the code there doesn't belong to original Skeleton and there are many custom CSS alongside the site. <b>But this website is pure Meshki</b>, and uses <a href="custom.css" id="components" target="_blank">custom.css</a> to customize website-related stuff.
         </p>
