--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <meta name="twitter:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
   <meta name="twitter:image" content="meta-image.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.3/meshki.min.css">
+  <link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
   <link rel="shortcut icon" href="dist/favicon.ico" type="image/x-icon" />
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.3/meshki.min.js"></script>
+  <script type="text/javascript" src="dist/meshki.min.js"></script>
 </head>
 
 <body>
@@ -74,9 +74,9 @@
             <a href="#footer-doc">Footer</a>
           </div>
         </li>
-        <li class="nav-right hide-on-tablet"><input type="text" name="" placeholder="Search..."></li>
-        <li class="nav-right hide-on-tablet"><button class="success"><i class="fa fa-search" aria-hidden="true"></i></button></li>
-        <li class="nav-right hide-on-tablet"><iframe src="https://ghbtns.com/github-btn.html?user=borderliner&repo=meshki&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px" style="margin-top:5px;position:relative;left:20px;opacity:0.95;"></iframe></li>
+        <li class="nav-right hide-on-tablet custom-item" style="padding-right: 15px;"><input type="text" name="" placeholder="Search..."></li>
+        <li class="nav-right hide-on-tablet custom-item"><button class="success"><i class="fa fa-search" aria-hidden="true"></i></button></li>
+        <li class="nav-right hide-on-tablet custom-item"><iframe src="https://ghbtns.com/github-btn.html?user=borderliner&repo=meshki&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px" style="margin-top:5px;position:relative;left:20px;opacity:0.95;"></iframe></li>
       </ul>
     </div>
     <div class="container">
